# crm-etl-pipeline

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dockerfile  extract_data.py  pyproject.toml  run_etl.sh
docs/: database.md
experiment-scripts/experiment/: calculate.ipynb  cleaning.ipynb
pipeline-scripts/: calculate_aggregations.py  extract_data.py  kpis.py  load.py  main.py  transform.py  transform_old.py
scripts/: api.sh  extract_data.py  main.py  update_data.py
tables-creation/: create_tables.py
